--- a/CloudService/CloudService/Views/PersonalViewCell.xib
+++ b/CloudService/CloudService/Views/PersonalViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15A2301" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -13,11 +13,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="68"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="67"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="67.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KRi-FU-Q1E">
-                        <rect key="frame" x="13" y="8" width="52" height="52"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KRi-FU-Q1E">
+                        <rect key="frame" x="13" y="16" width="35.5" height="35.5"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="KRi-FU-Q1E" secondAttribute="height" multiplier="1:1" id="CYB-vj-qW5"/>
                             <constraint firstAttribute="width" secondItem="KRi-FU-Q1E" secondAttribute="height" id="uBG-L7-CP0"/>
@@ -45,9 +45,9 @@
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="KRi-FU-Q1E" secondAttribute="bottom" id="1Iz-WA-F9c"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="KRi-FU-Q1E" secondAttribute="bottom" constant="8" id="1Iz-WA-F9c"/>
                     <constraint firstItem="oHg-za-B8E" firstAttribute="width" secondItem="oHg-za-B8E" secondAttribute="height" id="AxW-TC-Oyc"/>
-                    <constraint firstItem="KRi-FU-Q1E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Gmh-vQ-CLo"/>
+                    <constraint firstItem="KRi-FU-Q1E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="Gmh-vQ-CLo"/>
                     <constraint firstAttribute="trailingMargin" secondItem="oHg-za-B8E" secondAttribute="trailing" constant="5" id="eKO-z5-wZV"/>
                     <constraint firstItem="KRi-FU-Q1E" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="fbr-zM-10Q"/>
                     <constraint firstAttribute="bottomMargin" secondItem="oHg-za-B8E" secondAttribute="bottom" id="gsC-Vp-K24"/>
@@ -63,8 +63,10 @@
                 </variation>
             </tableViewCellContentView>
             <connections>
+                <outlet property="bottom" destination="1Iz-WA-F9c" id="C3x-Mo-PGu"/>
                 <outlet property="titleImage" destination="KRi-FU-Q1E" id="Les-fu-O8B"/>
                 <outlet property="titleLabel" destination="wko-MS-SYK" id="E3Y-7C-Alh"/>
+                <outlet property="top" destination="Gmh-vQ-CLo" id="vIX-ZP-sIZ"/>
             </connections>
             <point key="canvasLocation" x="346" y="256"/>
         </tableViewCell>
